--- a/src/pages/layout/TagsView/index.less
+++ b/src/pages/layout/TagsView/index.less
@@ -1,6 +1,6 @@
 .app-tags-view {
   width: 100%;
-  height: 35px;
+  height: 40px;
   background: #fff;
   border-bottom: 1px solid #d8dce5;
   -webkit-box-shadow: 0 1px 3px 0 rgb(0 0 0 / 12%), 0 0 3px 0 rgb(0 0 0 / 4%);
@@ -11,7 +11,20 @@
   padding: 0px 10px;
   .tag-item {
     user-select: none !important;
+    height: 27px;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     cursor: pointer;
+    .ant-tag-close-icon {
+      display: inherit;
+    }
+    &-icon {
+      font-size: 13px;
+      margin-left: 5px;
+      margin-top: 0.5px;
+    }
   }
 }
 .app-tags-view-menu {
