--- a/src/pages/layout/TagsView/index.less
+++ b/src/pages/layout/TagsView/index.less
@@ -17,6 +17,7 @@
     align-items: center;
     justify-content: space-between;
     cursor: pointer;
+    border: 1px solid #f7f4f4;
     .ant-tag-close-icon {
       display: inherit;
     }
