--- a/src/pages/layout/index.less
+++ b/src/pages/layout/index.less
@@ -1,3 +1,11 @@
 .app-layout {
   height: 100%;
+  &-content {
+    display: flex;
+    flex-direction: column;
+    &-inside {
+      flex: 1;
+      overflow: auto;
+    }
+  }
 }
