--- a/src/pages/layout/Header/index.less
+++ b/src/pages/layout/Header/index.less
@@ -4,6 +4,7 @@
   z-index: 1;
   display: flex;
   padding-left: 0;
+  padding-right: 10px;
   justify-content: space-between;
   &-left-menu {
     display: flex;
