perf: 🎈 完善LOGO处的折叠

--- a/src/pages/layout/Header/index.less
+++ b/src/pages/layout/Header/index.less
@@ -21,8 +21,12 @@
     display: flex;
     align-items: center;
     margin-right: 10px;
+    transition: all 0.3s;
     & > .icon {
       height: 40px;
+    }
+    &.collapsed {
+      width: 60px;
     }
   }
 }
