--- a/src/layout/Header/index.less
+++ b/src/layout/Header/index.less
@@ -6,6 +6,7 @@
   padding-left: 0;
   padding-right: 10px;
   justify-content: space-between;
+  z-index: 3;
   &-left-menu {
     display: flex;
     align-items: center;
@@ -20,8 +21,27 @@
     height: 100%;
     display: flex;
     align-items: center;
+    box-sizing: border-box;
+    padding-left: 20px;
     margin-right: 10px;
     transition: all 0.3s;
+    font-size: 17px;
+    font-weight: bold;
+    color: #333;
+    &__title {
+      margin-left: 10px;
+      opacity: 0;
+      animation: LogoTitleShow 0.6s linear 0.3s;
+      animation-fill-mode: forwards;
+      @keyframes LogoTitleShow {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+    }
     & > .icon {
       height: 40px;
     }
