--- a/src/layout/TagsView/index.less
+++ b/src/layout/TagsView/index.less
@@ -9,6 +9,7 @@
   display: flex;
   align-items: center;
   padding: 0px 10px;
+  z-index: 2;
   .tag-item {
     user-select: none !important;
     height: 27px;
