--- a/src/layout/index.less
+++ b/src/layout/index.less
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     &-inside {
+      background-color: #fff;
       flex: 1;
       overflow: auto;
     }
