--- a/src/layout/Header/index.less
+++ b/src/layout/Header/index.less
@@ -1,9 +1,10 @@
 .app-header {
-  @apply bg-white
+  @apply 
   pl-0 pr-10px
   flex justify-between
   z-3;
   box-shadow: 0 2px 6px #dddddd;
+  padding: 0 20px !important;
   &-left-menu {
     display: flex;
     align-items: center;
@@ -46,4 +47,20 @@
       width: 60px;
     }
   }
+
+  .ant-btn-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    svg {
+      width: 22px;
+      height: 22px;
+      cursor: pointer;
+    }
+  }
 }
+
+
+
+
